--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,18 +9,26 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
-  # DI
-  get_it: ^8.0.3
 
   # Data
+  get_it: ^8.0.3
   retrofit: ^4.6.0
   flutter_bloc: ^9.1.1
   json_annotation: ^4.8.1
+  shared_preferences: ^2.5.3
   
   # UI
+  intl: ^0.20.2
+  lottie: ^3.3.1
+  shimmer: ^3.0.0
   pull_to_refresh: ^2.0.0
-  
+  easy_localization: ^3.0.7+1
+  cached_network_image: ^3.4.1
+
+  # Firebase
+  firebase_analytics: ^11.5.2
+  firebase_crashlytics: ^4.1.3
+
 
 dev_dependencies:
   flutter_test:
