--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,10 +11,13 @@ dependencies:
     sdk: flutter
 
   # Data
+  dio: ^5.4.1
+  dartz: ^0.10.1
   get_it: ^8.0.3
   retrofit: ^4.6.0
+  equatable: ^2.0.7
   flutter_bloc: ^9.1.1
-  json_annotation: ^4.8.1
+  json_annotation: ^4.9.0
   shared_preferences: ^2.5.3
   
   # UI
