--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,11 @@ dependencies:
   json_annotation: ^4.9.0
   shared_preferences: ^2.5.3
   
+  # Navigation
+  auto_route: ^9.2.2
+  
   # UI
+  gap: ^3.0.1
   intl: ^0.20.2
   lottie: ^3.3.1
   shimmer: ^3.0.0
@@ -40,9 +44,10 @@ dev_dependencies:
   flutter_lints: ^6.0.0
   
   # Code generation
-  build_runner: ^2.6.0
-  json_serializable: ^6.10.0
-  retrofit_generator: ^10.0.0
+  build_runner: ^2.5.4
+  json_serializable: ^6.7.1
+  retrofit_generator: ^8.0.3
+  auto_route_generator: ^9.0.0
 
 flutter:
   uses-material-design: true
