--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   equatable: ^2.0.7
   flutter_bloc: ^9.1.1
   json_annotation: ^4.9.0
-  shared_preferences: ^2.5.3
+  flutter_secure_storage: ^9.2.2
   
   # Navigation
   auto_route: ^10.1.0+1
@@ -29,6 +29,8 @@ dependencies:
   lottie: ^3.3.1
   shimmer: ^3.0.0
   flutter_svg: ^2.2.0
+  image_picker: ^1.1.2
+  google_fonts: ^6.2.1
   pull_to_refresh: ^2.0.0
   easy_localization: ^3.0.7+1
   cached_network_image: ^3.4.1
@@ -56,6 +58,8 @@ flutter:
   assets:
     - assets/images/
     - assets/images/icons/
+    - assets/images/bonus/
+    - assets/animations/
     - assets/translations/
 
   fonts:
