--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,12 +18,15 @@ dependencies:
   retrofit: ^4.6.0
   equatable: ^2.0.7
   flutter_bloc: ^9.1.1
-  flutter_dotenv: ^5.2.1
   json_annotation: ^4.9.0
-  flutter_secure_storage: ^9.2.2
   
   # Navigation
   auto_route: ^10.1.0+1
+  flutter_dotenv: ^5.2.1
+  flutter_secure_storage: ^9.2.2
+
+  # Infrastructure
+  logger: ^2.6.1
   
   # UI
   gap: ^3.0.1
@@ -39,6 +42,7 @@ dependencies:
   flutter_native_splash: ^2.4.6
 
   # Firebase
+  firebase_core: ^3.15.2
   firebase_analytics: ^11.5.2
   firebase_crashlytics: ^4.1.3
 
